# pouet2excel

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build-binaries.yml  pages.yml
src/: main.rs
src/functions/: decompress_gzip_file.rs  display_prods.rs  download_to_file.rs  export_prods.rs  fetch_pouet_data.rs  from_str_opt.rs  latest_dump.rs  mod.rs
src/structs/: credit.rs  download_link.rs  dump_data.rs  group.rs  mod.rs  party.rs  placement.rs  platform.rs  pouet_data.rs  pouet_data_latest.rs  pouet_data_prod.rs  prod.rs  prod_type.rs  user.rs
templates/: index.html
