[package]
name = "pouet2excel"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
flate2 = "1.1.4"
reqwest = { version = "0.12.24", features = ["json"] }
rust_xlsxwriter = "0.90.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tera = "1.20.0"
tokio = { version = "1.48.0", features = ["full"] }
